2015-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (path_conv::get_ino_by_handle): Rename fai to
	fii for clearness.
	(fhandler_disk_file::readdir): Ditto.

2015-12-09  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (FILE_ID_BOTH_DIR_INFORMATION): Revert IndexNumber to FileId
	since it's actually right here.
	* fhandler_disk_file.cc: Accommodate above change.

2015-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::setcancelstate): Remove unnecessary locking.
	(pthread::setcanceltype): Ditto.

2015-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (FILE_ID_BOTH_DIR_INFORMATION): Rename FileId to IndexNumber
	to align with Microsoft naming scheme.
	(FILE_INTERNAL_INFORMATION): Ditto.
	* fhandler_disk_file.cc: Rename FileId to IndexNumber throughout.
	* syscalls.cc: Ditto.

2015-12-07  Johannes Schindelin  <johannes.schindelin@gmx.de>

	* mount.cc (mount_info::from_fstab_line): Support mounting the current
	user's temp folder as /tmp/.  This is particularly useful a feature
	when Cygwin's own files are write-protected.

2015-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/select.h: Move select(2) macros from newlib's sys/types.h
	here.  Rename howmany to _howmany to unclutter namespace. Move file to
	newlib.
	* libc/rexex.cc: Add declaration for cygwin_gethostname.
	* poll.cc: Include sys/param.h and locale select.h.
	* select.h (cygwin_select): Declare.
	* uname.cc: Declare cygwin_gethostname.
	* winsup.h: Drop declarations of cygwin_select and cygwin_gethostname.

2015-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc: Semi-revert commit 12743c2d5d2721f3a80b4d7671a349be03c1f520.
	(dll_crt0_0): Drop setting wow64_needs_stack_adjustment on 64 bit.
	(_dll_crt0): Split out 64 bit code again and always create new main
	thread stack, unless forked off from the non main thread in the parent.
	Call create_new_main_thread_stack with parent stack commitsize if